image alignment fixes

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,6 +1,6 @@
 .example-card {
     /*max-width: 500px; */
-    min-width: 250px;
+    max-width: 300px;
     cursor: pointer;
     
   }
@@ -11,3 +11,7 @@
     padding-bottom: 1rem;
     background-color: rgb(92, 79, 239);
 }   
+.img{
+  
+  max-width: 300px;
+}
